# subtle_storm

./: .gitignore  .rubocop.yml  Dockerfile  Gemfile  Ideas.md  build.mjs  db.py  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pya.py  pyproject.toml  repo.py  vite.config.js
app/controllers/: application_controller.rb  passwords_controller.rb  projects_controller.rb  sessions_controller.rb  tasks_controller.rb
app/helpers/: application_helper.rb  errors_helper.rb  project_admin_helper.rb  tasks_helper.rb  workflows_helper.rb
app/javascript/: application.js
app/jobs/: project_post_init_job.rb
app/models/: project.rb  task.rb  task_status.rb  workflow.rb
app/services/: application_service.rb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  importmap.rb  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: warden.rb
db/: schema.rb
db/migrate/: 20250621203845_create_projects.rb  20250621203940_create_tasks.rb  20251021180400_add_status_to_projects.rb  20251021204013_create_task_statuses.rb  20251025131322_make_projects_status_not_null.rb  20251025132011_add_status_to_tasks.rb  20260321114951_create_workflows.rb  20260321115521_add_workflow_id_to_statuses_and_tasks.rb  20260321132125_change_task_statuses_uniqueness.rb  20260321132550_add_null_false_to_task_statuses_workflow.rb  (+4 more)
js/: app.js  main.js
js/assets/: main.css
static/: app.css
subtle_storm/: __init__.py  db.py  forms.py  repo.py
templates/: _base.html  projects_index.html  projects_select.html  root.html  tasks_index.html
(+76 files in other folders)
