[tool.poetry]
name = "subtle_storm"
version = "0.0.1"
description = ""
authors = ["Artemiy Solopov <art-solopov@yandex.ru>"]
license = "UNLICENSED"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-arango = "^7.7"
pydantic = "^2.4.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
python-lsp-server = "^1.8.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
